# Rope-Bag-Manag

./: .gitignore  API_INTEGRATION_SUMMARY.md  API修复总结.md  API文档.md  Cargo.toml  FRONTEND_BACKEND_INTEGRATION.md  README.en.md  README.md  complete_database_init.sql  debug_auth.html  package.json  pnpm-lock.yaml  start_fullstack.bat  start_fullstack.ps1  start_server.bat  test_api_stats.py  test_frontend.md  test_login.html  test_login.ps1  test_login_fix.html  test_login_flow.html  test_user_actions.py  zi.cursorrules  后端重构分析报告.md  安全分析报告_路由权限体系.md  开发记录与开发规则.md  数据库调整建议.md  结绳社区开放平台接入规范.md  部署指南.md
APP_HouDuan/: .env.template  .gitignore  Cargo.toml  README.md  attack_views.py  data.db  data.db-shm  data.db-wal  data.db.backup_20250827_071056  data_restored.db  fix_database.sql  fix_follow_tables.sql  fix_sqlite_triggers.sql  openapi.yaml  start.bat
APP_HouDuan/backups/: backup_manual_20250727_132855.db  backup_manual_20250730_164144.db
APP_HouDuan/config/: default.toml  development.toml  production.toml
APP_HouDuan/data/: data.db初始化版本  dev.db  dev.db-shm  dev.db-wal
APP_HouDuan/docs/: CLEANUP_SUMMARY.md  CONFIGURATION_CLEANUP_REPORT.md  PROJECT_STRUCTURE.md  SECURITY_ENHANCEMENT_SUMMARY.md  SQL_OPTIMIZATION_REPORT.md  SQL_USAGE_GUIDE.md  USAGE_GUIDE.md  directory_cleanup_plan.md
APP_HouDuan/logs/: server.log.2025-08-24
APP_HouDuan/migrations/: 001_initial.sql  002_refactor_adjustments.sql  003_storage_files.sql
APP_HouDuan/sql/: clear_all_data.sql  database_manager.sql  init.sql
APP_HouDuan/sql/migrations/: 001_add_missing_columns.sql  002_add_security_logs.sql  003_add_download_security_tables.sql  004_add_post_content_fields.sql
APP_HouDuan/sql/schema/: 001_core_tables.sql  002_system_tables.sql  003_indexes.sql  004_follow_tables.sql
APP_HouDuan/sql/seeds/: 001_default_data.sql
APP_HouDuan/sql_old_backup/: add_package_publish_fields.sql  add_subscription_lock.sql  add_user_profile_fields.sql  create_download_security_tables.sql  create_ip_ban_tables.sql  create_mail_settings.sql  create_subscriptions.sql  fix_categories.sql  init_homepage_settings.sql  init_system_tables.sql  migrate_comments.sql  migrate_likes.sql  migrate_package_approval.sql  migrate_post_review.sql  migrate_posts_and_tags.sql  patch_database_settings.sql  test_data_resource_records.sql
APP_HouDuan/sql_old_backup/init/: create_view_tracking_tables.sql
APP_HouDuan/sql_old_backup/migrations/: apply_migration.sql
APP_HouDuan/sql_old_backup/patches/: check_and_fix_db.sql  fix_packages_table.sql  fix_user_actions_table.sql
APP_HouDuan/sql_old_backup/test/: create_test_posts.sql  update_resource_42.sql
APP_HouDuan/src/: config.rs  main.rs  main_new.rs
APP_HouDuan/src/api/: mod.rs
APP_HouDuan/src/bootstrap/: app.rs  database.rs  mod.rs  services.rs
APP_HouDuan/src/config/: mod.rs
APP_HouDuan/src/core/: mod.rs
APP_HouDuan/src/infrastructure/: mod.rs
APP_HouDuan/src/middleware/: auth.rs  cors.rs  role_guard.rs
APP_HouDuan/src/models/: comment.rs  mod.rs  notification.rs  package.rs  post.rs  resource_record.rs  system.rs  tag.rs  user_action.rs
APP_HouDuan/src/repositories/: comment_repo.rs  download_security_repo.rs  follow_repo.rs  forbidden_word_repo.rs  mod.rs  package_repo.rs  package_repo_patch.rs  post_repo.rs  user_repo.rs
APP_HouDuan/src/services/: admin_service.rs  anti_fraud_service.rs  auth_service.rs  comment_service.rs  database_repair_service.rs  download_security_service.rs  email_service.rs  local_storage.rs  mod.rs  package_service.rs  package_storage_service.rs  post_service.rs  security_action_service.rs  simple_email_service.rs  tag_service.rs  user_action_service.rs
APP_HouDuan/src/shared/: mod.rs
APP_HouDuan/src/utils/: auth_helper.rs  file.rs  logger.rs  mod.rs
APP_HouDuan/tools/admin/: check_user_actions.rs
APP_HouDuan/tools/database/: apply_publish_migration.rs  clear_database_and_reset_ids.sql  fix_vec_fields.rs  migrate_db.rs
APP_HouDuan/tools/test/: simple_smtp_test.rs  test_alist_connection.rs  test_api_endpoints.rs  (+4 more)
rope-manager-backend/: API_DOCUMENTATION.md  API对接文档.md  COMMENT_MODULE_README.md  CONFIG.md  Cargo.toml  LOGGING_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_DOWNLOAD_SECURITY.md  TEST_GUIDE.md  USAGE.md  add_admin_test_data.sql  check_db_schema.rs  check_english_tags.py  complete_replace_tags.py  config.toml  config_manager.ps1  create_sample_data.sql  cursor_.md  cursor_app.md  data.db  enable_mail.sql  fix_163_mail.sql  fix_163_smtp.sql  fix_announcements.bat  fix_categories.bat  fix_comment_likes.sql  fix_struct_fields.rs  fix_system_tables.bat  headers.json  import_test_data.bat  import_test_data.ps1  migrate_and_import.ps1  migrate_and_start.bat  migrate_announcements.bat  migrate_announcements.ps1  migrate_db.rs  migrate_system_settings.sql  migrate_user_actions.bat  migrate_user_actions.ps1  (+31 more)
rope-manager-backend/backups/: backup_manual_20250720_054231.db  backup_manual_20250720_054621.db  backup_manual_20250721_040105.db  backup_manual_20250813_153305.db  backup_manual_20250813_165055.db
rope-manager-backend/fq/: DATABASE_PATCH_README.md  IP封禁系统实现总结.md  README_EMAIL_SETUP.md  README_TAG_COUNTS.md  check_db_structure.rs  check_tables.rs  check_tags_table.rs  create_missing_tables.sql  create_security_tables.sql  data.db  data.db.backup_20250804_023803  data.db.backup_20250804_024402  debug_user_actions.rs  fix_mail_enable.rs  fix_tags_table.rs  fix_user_status.rs  generate_admin_password.rs  init_security_tables.rs  smtp_test_tool.rs  test_download_security.rs  test_download_security_api.rs  test_ip_ban.rs  test_ip_bans.rs  test_user_actions_api.rs  update_tag_counts.rs  verify_password.rs  防刷量系统实现总结.md
rope-manager-backend/sql/: add_comment_pinned.sql  add_included_files_field.sql  add_package_tags.sql  add_tags_table.sql  create_banner_table.sql  fix_announcements.sql  fix_system_tables.sql  init.sql  init_system_tables.sql  migrate_announcements.sql  migrate_email.sql  migrate_resource_records.sql  migrate_user_actions.sql  remove_system_settings.sql
rope-manager-backend/src/: config.rs  main.rs
(+1224 files in other folders)
