[package]
name = "绳包管理器"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
actix-web = "4.4"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 日志记录
log = "0.4"
env_logger = "0.11.7"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"

# 错误处理
anyhow = "1.0"

# 配置管理（可选）
config = "0.15.12"

# 验证（可选）
validator = { version = "0.20.0", features = ["derive"] }
urlencoding = "2.1.3"

[dev-dependencies]
# 测试相关
tokio-test = "0.4"
