[package]
name = "jieshen-backend"
version = "2.0.0"
edition = "2021"
authors = ["JieShenSheQu Team"]
description = "绳包管理器后端服务 - 重构版本"
license = "MIT"

[dependencies]
# Web框架和HTTP
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
tokio = { version = "1.35", features = ["full"] }

# 数据库和ORM
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }

# 序列化和JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 认证和安全
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志系统 - 完整的tracing生态
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "fmt"] }
tracing-appender = "0.2"
tracing-actix-web = "0.7"

# 配置管理
config = "0.14"
dotenvy = "0.15"

# 验证
validator = { version = "0.18", features = ["derive"] }

# 缓存
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# 邮件服务
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

# 文件处理
mime_guess = "2.0"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
opendal = { version = "0.54.0", default-features = false, features = ["services-fs"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "multipart"] }

# 依赖注入
async-trait = "0.1"

# 实用工具
once_cell = "1.19"
rand = "0.9.2"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

# 优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 