[package]
name = "rope-manager-backend"
version = "0.1.0"
edition = "2021"
default-run = "rope-manager-backend"

# 清理后的二进制定义 - 只保留常用工具的快捷方式
[[bin]]
name = "check_db_schema"
path = "tools/database/check_db_schema.rs"

[[bin]]
name = "patch_database" 
path = "tools/database/patch_database.rs"

[[bin]]
name = "generate_admin_password"
path = "tools/admin/generate_admin_password.rs"

[[bin]]
name = "simple_test"
path = "tools/test/simple_test.rs"

[dependencies]
# Web框架
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7.2"
actix-web-httpauth = "0.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
tokio = { version = "1.35", features = ["full"] }

# 认证
jsonwebtoken = "9.2"
bcrypt = "0.15"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
urlencoding = "2.1"

# 日志
env_logger = "0.10"
log = "0.4"

# 配置
config = "0.14"
toml = "0.8"

# 文件处理
mime_guess = "2.0"
futures-util = "0.3"
futures = "0.3"

# 正则
regex = "1.10"

# 邮件发送
lettre = { version = "0.11.17", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
reqwest = { version = "0.11", features = ["json"] }

# 其他工具
rand = "0.9.2"
html2text = "0.15.3"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"