[package]
name = "rope-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
actix-web = "4.4"
actix-cors = "0.7.1"
actix-files = "0.6"
actix-multipart = "0.7.2"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"

# 数据库
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
tokio = { version = "1.0", features = ["full"] }

# 认证
jsonwebtoken = "9.1"
bcrypt = "0.17.0"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.12"

# 日志
env_logger = "0.11.8"
log = "0.4"

# 配置
config = "0.15.13"
toml = "0.9.2"

# 文件处理
mime_guess = "2.0"
futures-util = "0.3"
futures = "0.3"
