[package]
name = "rope-manager-backend"
version = "0.1.0"
edition = "2021"
default-run = "rope-manager-backend"

[dependencies]
# Web框架
actix-web = "4.4"
actix-cors = "0.7.1"
actix-files = "0.6"
actix-multipart = "0.7.2"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"

# 数据库
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
tokio = { version = "1.47.0", features = ["full", "macros", "rt-multi-thread"] }

# 认证
jsonwebtoken = "9.1"
bcrypt = "0.17.0"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.12"

# 日志
env_logger = "0.11.8"
log = "0.4"

# 配置
config = "0.15.13"
toml = "0.9.2"

# 文件处理
mime_guess = "2.0"
futures-util = "0.3"
futures = "0.3"

# 使用 tokio + native-tls（需 tokio1-native-tls），并启用 builder 与 smtp-transport 功能
lettre = { version = "0.11.17", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

# 添加备用邮件发送方案
reqwest = { version = "0.11", features = ["json"] }

# 6位数验证码
rand = "0.9.2"

# HTML转纯文本
html2text = "0.15.3"

[[bin]]
name = "simple_smtp_test"
path = "simple_smtp_test.rs"
