[package]
name = "rope-manager-backend"
version = "0.1.0"
edition = "2021"
default-run = "rope-manager-backend"

[[bin]]
name = "check_db_schema"
path = "check_db_schema.rs"

[[bin]]
name = "update_tag_counts"
path = "update_tag_counts.rs"

[[bin]]
name = "patch_database"
path = "patch_database.rs"

[[bin]]
name = "check_db_structure"
path = "check_db_structure.rs"

[[bin]]
name = "test_alist_connection"
path = "test_alist_connection.rs"



[dependencies]
# Web框架
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7.2"
actix-web-httpauth = "0.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
tokio = { version = "1.35", features = ["full"] }

# 认证
jsonwebtoken = "9.2"
bcrypt = "0.15"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
urlencoding = "2.1"

# 日志
env_logger = "0.10"
log = "0.4"

# 配置
config = "0.14"
toml = "0.8"

# 文件处理
mime_guess = "2.0"
futures-util = "0.3"
futures = "0.3"

# 使用 tokio + native-tls（需 tokio1-native-tls），并启用 builder 与 smtp-transport 功能
lettre = { version = "0.11.17", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

# 添加备用邮件发送方案
reqwest = { version = "0.11", features = ["json"] }

# 6位数验证码
rand = "0.9.2"

# HTML转纯文本
html2text = "0.15.3"

# 权限中间件
once_cell = "1.19"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "simple_smtp_test"
path = "simple_smtp_test.rs"

[[bin]]
name = "verify_password"
path = "verify_password.rs"

[[bin]]
name = "fix_user_status"
path = "fix_user_status.rs"

[[bin]]
name = "check_user_actions"
path = "check_user_actions.rs"

[[bin]]
name = "fix_tags_table"
path = "fix_tags_table.rs"

[[bin]]
name = "test_ip_bans"
path = "test_ip_bans.rs"








